# brnrd

./: .environment  .gitattributes  .gitconfig  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-OVERVIEW.md  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml
.tmp/: 07-07-2026-telegram-interaction.md
.upsun/: config.yaml
design/: init-wake-spec.md
docker/: Dockerfile
docs/: .gitignore  README.md  astro.config.mjs  index.md  mkdocs.yml  package-lock.json  package.json  repo-first-model.md
docs/concepts/: agents-and-kb.md  daemon.md  gates-and-portals.md
docs/docs/: index.md  security.md
docs/docs/concepts/: environments.md  gates.md  resident.md
docs/docs/getting-started/: connect.md  first-task.md  install.md
docs/docs/guides/: models.md  troubleshooting.md
docs/docs/reference/: cli.md
docs/docs/self-hosting/: index.md
docs/getting-started/: install.md  quickstart.md
docs/reference/: cli.md
docs/scripts/: check-links.mjs
docs/self-hosting/: index.md
docs/src/styles/: brnrd.css
frontend/: README.md  package-lock.json
frontend/src/routes/: +layout.ts  +page.svelte
kb/: decision-account-centered-daemon.md  decision-brnrd-github-oauth-identity.md  decision-brnrd-rename.md  decision-brnrd-repo-first-model.md  decision-bundled-docs.md  decision-cli-shape.md  decision-connectors-layering.md  decision-drop-streams.md  decision-hosted-execution-liability.md  decision-kb-shape.md  decision-licensing-and-defense.md  decision-llm-passthrough-credits.md  decision-llm-relay.md  decision-monorepo-structure.md  decision-pricing-shape.md  decision-remove-triage.md  decision-runtime-dependencies.md  deck-brr-current.md  deck-brr-fleet-steering.md  design-agent-dominion.md  design-agent-ergonomics.md  design-agent-visual-inspection.md  design-billing.md  design-brand-brnrd-brr.md  design-brand-visual-language.md  design-brnrd-channel-routing.md  design-brnrd-github-bot-user.md  design-brnrd-protocol.md  design-brr-run-protocol.md  design-co-maintainer.md  design-concurrent-execution.md  design-config-layout.md  design-context-introspection.md  design-conversation-continuity.md  design-daemon-dev-reload.md  design-daemon-landing-branch.md  design-dashboard-live-surface.md  design-diffense.md  design-director-loop.md  design-env-interface.md  (+80 more)
kb/agent-ergonomics-evaluation/: clean-slate-environment-testing-playbook.md
media/graph-mock/: README.md  index.html  snap.js
packaging/: check_release_version.py
packaging/npm/: README.md  package.json  uv-assets.json
src/brnrd/: __init__.py  __main__.py  activity_records.py  app.py  auth.py  billing.py  config.py  db.py  ids.py  inbox.py  limits.py  migrations.py  models.py  models_new.py  oauth.py  pack_relay.py  run_stop_requests.py  schemas.py  security.py  stripe_api.py  test_write_probe.py  version_info.py  wake_requests.py
src/brnrd/routers/: __init__.py  _session.py  accounts.py  billing.py  config_approval.py  daemons.py  dashboard.py  dev.py  github_app.py  pairing.py  render.py  repo_actions.py  stats.py  web_auth.py  webhooks.py
src/brnrd/static/: app.css  dashboard.css
src/brnrd_web/: __init__.py  activity_dashboard.py  plans_dashboard.py  routes.py
src/brnrd_web/static/: app.css  dashboard.css
src/brnrd_web/templates/: activity.html  base.html  config_approve.html  connect.html  dashboard.html  login.html  message.html  plans.html  terms.html
src/brr/: AGENTS.md  Dockerfile  LICENSE  __main__.py  account.py  adopt.py  bench.py  bootscore.py  branching.py  claude_status.py  claude_usage.py  cli.py  codex_status.py  codex_usage.py  config.py  constitution.py  continuity.py  conversations.py  daemon.py  dev_reload.py  dominion.py  emotes.py  facets.py  forge_pr_cache.py  forge_state.py  forges.py  gitops.py  home_link.py  hooks.py  init_wake.py  kb_health.py  kb_preflight.py  knowledge.py  message_store.py  pitfalls.py  portals.py  presence.py  prompts.py  protocol.py  release_availability.py  (+29 more)
src/brr/daemon_install/: __init__.py  linux.py  macos.py
src/brr/data/: __init__.py  runner-capabilities.json  solitary_proxy.py
src/brr/diffense/: __init__.py  gist.py  pack.py  prbody.py  render.py  review-pr64.html  template.html
src/brr/docs/: __init__.py  account-daemon.md  active-task.md  brr-internals.md  cockpit.md  conversations.md  envs.md  execution-map.md  internals.md  portals.md  review-pack.md  streams.md
src/brr/envs/: __init__.py
src/brr/ergonomics/: __init__.py  probes.py  proxy.py  record.py  store.py
src/brr/gates/: README.md  __init__.py  cloud.py  delivery.py  git_gate.py  github.py  runtime.py  slack.py  telegram.py
src/brr/prompts/: daemon-substrate.md  diffense.md  dominion-playbook.md  identity-core.md  init-playbook.md  introspection.md  kb-index.md  kb-log.md  kb-maintenance.md  register.md  run.md  runners.md  self-review.md  setup.md  triage.md  (+2 more)
src/frontend/: package-lock.json  package.json  vite.config.ts
tests/: _helpers.py  conftest.py  test_account.py  test_adopt.py  test_bench.py  test_boot_mount.py  test_boot_replay.py  test_branching.py  test_brnrd_activity.py  test_brnrd_billing.py  test_brnrd_config_approval.py  test_brnrd_dashboard.py  test_brnrd_github.py  test_brnrd_inbox.py  test_brnrd_limits.py  test_brnrd_oauth.py  test_brnrd_pack_relay.py  test_brnrd_plans.py  test_brnrd_quota.py  test_brnrd_run_ledger.py  test_brnrd_runners.py  test_brnrd_stats.py  test_brnrd_surface.py  test_brnrd_telegram.py  test_brnrd_web.py  test_claude_status.py  test_claude_usage.py  test_cli.py  test_cloud_gate.py  test_codex_status.py  test_codex_usage.py  test_config.py  test_config_trust.py  test_constitution.py  test_continuity.py  test_conversations.py  test_daemon.py  test_daemon_burst.py  test_daemon_concurrency.py  test_daemon_conversations.py  (+82 more)
(+108 files in other folders)
