[project]
name = "brr"
version = "0.1.0"
description = "Structured guardrails for AI agent work, managed from a chat"
authors = [ { name = "brr Contributors" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31,<3"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Per-package license split (see LICENSE-OVERVIEW.md): the daemon
# core (`src/brr/`) is MIT; the brnrd backend (`src/brnrd/`,
# pulled by the `backend` extra) is AGPLv3.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brr = ["AGENTS.md", "Dockerfile", "prompts/*.md", "docs/*.md", "gates/README.md"]

[project.optional-dependencies]
backend = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
]
# Postgres driver for deployment (Upsun/managed). psycopg3 ships
# manylinux wheels, so no native build step. SQLite (stdlib) covers
# local dev, so this stays out of the default `backend` set.
postgres = [
  "psycopg[binary]>=3.1",
]
dev = ["pytest>=7.0", "brr[backend]"]

[project.scripts]
brr = "brr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
