[project]
name = "brnrd"
# Derived from src/brr/__init__.py — see [tool.setuptools.dynamic] below.
dynamic = ["version"]
description = "Structured guardrails for AI agent work, managed from a chat"
authors = [ { name = "HugiMuni" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31,<3", "packaging>=23"]
license = "MIT AND AGPL-3.0-only"
license-files = [
  "LICENSE",
  "LICENSE-OVERVIEW.md",
  "src/brr/LICENSE",
  "src/brnrd/LICENSE",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://brnrd.dev"
Repository = "https://github.com/hugimuni-labs/brnrd"
Issues = "https://github.com/hugimuni-labs/brnrd/issues"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

# One version, not three (#674). `brnrd --version`, the dashboard's
# `daemon_version`, and the self-update banner all read `brr.__version__`; a
# literal here would be a second copy that can silently disagree with them
# while `packaging/check_release_version.py` still passes. setuptools reads
# this attribute statically (`src/brr/__init__.py` is `__all__` plus a literal,
# no imports), so nothing is executed at build time. The npm manifest is the
# one remaining mirror and the guard covers it.
[tool.setuptools.dynamic]
version = {attr = "brr.__version__"}

# Per-package license split (see LICENSE-OVERVIEW.md): the daemon
# core (`src/brr/`) is MIT; the brnrd backend (`src/brnrd/`,
# pulled by the `backend` extra) is AGPLv3.
[tool.setuptools.packages.find]
where = ["src"]
include = ["brr*", "brnrd*"]

[tool.setuptools.package-data]
brr = ["AGENTS.md", "LICENSE", "Dockerfile", "prompts/*.md", "templates/*.md", "docs/*.md", "gates/README.md", "diffense/template.html", "data/*.json"]
brnrd = ["LICENSE", "static/*.css"]

[project.optional-dependencies]
backend = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "PyJWT[crypto]>=2.8,<3",
]
# Postgres driver for deployment (Upsun/managed). psycopg3 ships
# manylinux wheels, so no native build step. SQLite (stdlib) covers
# local dev, so this stays out of the default `backend` set.
postgres = [
  "psycopg[binary]>=3.1",
]
dev = ["pytest>=7.0", "brnrd[backend]"]

[project.scripts]
brnrd = "brr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
